[gd_scene load_steps=13 format=2]

[ext_resource path="res://gui_modules/spellcasting/Spellcasting.gd" type="Script" id=1]
[ext_resource path="res://assets/Textures_v2/BATTLE/Buttons/button_victory.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/BATTLE/Buttons/button_victory_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttonclass_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttonclass_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttonclass.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/panels/hourglass.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/panels/cast.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/charpanel/manaorb.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonslave.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonslave_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonslave_pressed.png" type="Texture" id=12]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CasterContainer" type="ScrollContainer" parent="."]
margin_left = 45.0
margin_top = 47.0
margin_right = 482.0
margin_bottom = 1009.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CasterContainer"]

[node name="Button" type="TextureButton" parent="CasterContainer/VBoxContainer"]
visible = false
margin_right = 396.0
margin_bottom = 52.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="icon" type="TextureRect" parent="CasterContainer/VBoxContainer/Button"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 49.0
margin_bottom = 46.0
expand = true

[node name="name" type="Label" parent="CasterContainer/VBoxContainer/Button"]
margin_left = 54.0
margin_top = 7.0
margin_right = 388.0
margin_bottom = 43.0
valign = 1

[node name="TargetContainer" type="ScrollContainer" parent="."]
margin_left = 1159.0
margin_top = 47.0
margin_right = 1671.0
margin_bottom = 1009.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TargetContainer"]

[node name="Button" type="TextureButton" parent="TargetContainer/VBoxContainer"]
visible = false
margin_right = 464.0
margin_bottom = 52.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="icon" type="TextureRect" parent="TargetContainer/VBoxContainer/Button"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 49.0
margin_bottom = 46.0
expand = true

[node name="name" type="Label" parent="TargetContainer/VBoxContainer/Button"]
margin_left = 54.0
margin_top = 7.0
margin_right = 250.0
margin_bottom = 43.0
valign = 1

[node name="info" type="Label" parent="TargetContainer/VBoxContainer/Button"]
margin_left = 292.0
margin_top = 7.0
margin_right = 454.0
margin_bottom = 43.0
align = 2
valign = 1

[node name="no_targets" type="Label" parent="TargetContainer/VBoxContainer"]
visible = false
margin_right = 126.0
margin_bottom = 14.0
text = "No targets avaliable"
align = 1
valign = 1

[node name="SpellContainer" type="ScrollContainer" parent="."]
margin_left = 666.0
margin_top = 45.0
margin_right = 1013.0
margin_bottom = 1007.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SpellContainer"]

[node name="Button" type="TextureButton" parent="SpellContainer/VBoxContainer"]
visible = false
margin_right = 300.0
margin_bottom = 108.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )

[node name="icon" type="TextureRect" parent="SpellContainer/VBoxContainer/Button"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 103.0
margin_bottom = 103.0
expand = true

[node name="name" type="Label" parent="SpellContainer/VBoxContainer/Button"]
margin_left = 106.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 57.0

[node name="TextureRect" type="TextureRect" parent="SpellContainer/VBoxContainer/Button"]
margin_left = 108.0
margin_top = 78.0
margin_right = 129.0
margin_bottom = 99.0
texture = ExtResource( 9 )
expand = true

[node name="cost" type="Label" parent="SpellContainer/VBoxContainer/Button"]
margin_left = 133.0
margin_top = 79.0
margin_right = 155.0
margin_bottom = 98.0
text = "0"
valign = 1

[node name="TextureRect2" type="TextureRect" parent="SpellContainer/VBoxContainer/Button"]
margin_left = 150.0
margin_top = 78.0
margin_right = 171.0
margin_bottom = 99.0
texture = ExtResource( 8 )
expand = true

[node name="charges" type="Label" parent="SpellContainer/VBoxContainer/Button"]
margin_left = 175.0
margin_top = 79.0
margin_right = 197.0
margin_bottom = 98.0
text = "0/0"
valign = 1

[node name="cdicon" type="TextureRect" parent="SpellContainer/VBoxContainer/Button"]
visible = false
margin_left = 200.0
margin_top = 78.0
margin_right = 221.0
margin_bottom = 99.0
texture = ExtResource( 7 )
expand = true

[node name="cd2" type="Label" parent="SpellContainer/VBoxContainer/Button"]
visible = false
margin_left = 225.0
margin_top = 79.0
margin_right = 247.0
margin_bottom = 98.0
text = "0"
valign = 1
